--- a/templates/home.html
+++ b/templates/home.html
@@ -41,7 +41,7 @@
   .bgimg-1 {
     background-position: center;
     background-size: cover;
-    background-image: url("../../images/homebg.jpg");
+    background-color: #d2c1f7;
     min-height: 100%;
   }
 
