--- a/templates/home.html
+++ b/templates/home.html
@@ -82,7 +82,7 @@
 
   <!-- Navbar (sit on top) -->
   <div class="top">
-    <div class="bar white card" id="myNavbar" height="25px">
+    <div class="bar card" id="myNavbar" height="25px">
       <a href="#home" class="bar-item button wide"><img src="static/images/logo.png" style="width: auto; height:25px;border:0;"></a>
       <!-- Right-sided navbar links -->
       <div class="right hide-small">
