--- a/templates/home.html
+++ b/templates/home.html
@@ -113,7 +113,12 @@
       <span class="jumbo hide-small"><img src="static/images/logo.png" style="width: auto; height: 200px; position: relative; top:150px; left:50px;" </span> <br>
         <span class="xxlarge hide-large hide-medium">Laire</span><br>
         <span class="large" style="position: relative; left: 50px;"></span>
-        <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Learn more</a></p>
+        <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Learn more</a>
+        </p>
+        <p style="position:relative;left:50px;">
+            Cool guy tuff guy
+        </p>
+
     </div>
 
   </header>
