--- a/templates/home.html
+++ b/templates/home.html
@@ -169,7 +169,7 @@
           <img src="../static/images/haneefPic.JPEG" alt="Haneef" style="width:100%">
           <div class="container">
             <h3 style="color: black;">Haneef Khan</h3>
-            <p class="opacity" style="padding-bottom: 20px; color: black;">Lead Backend Developer</p>
+            <p class="opacity" style="padding-bottom: 20px; color: black;">Lead Software Developer</p>
             <center>
               <a href="mailto:haneef@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:10px"></i></a>
               <a href="https://www.linkedin.com/in/haneef-khan-778676139/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
@@ -182,7 +182,7 @@
           <img src="../static/images/sidPic.jpg" alt="Sid" style="width:100%">
           <div class="container">
             <h3 style="color: black;">Sid Rapolu</h3>
-            <p class="opacity" style="padding-bottom: 20px; color: black;">Lead UX Developer</p>
+            <p class="opacity" style="padding-bottom: 20px; color: black;">Lead Web Developer</p>
             <center>
               <a href="mailto:sid@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
               <a href="https://www.linkedin.com/in/sid-r-2a00a1137/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
