--- a/templates/home.html
+++ b/templates/home.html
@@ -152,7 +152,7 @@
     <div class="row-padding " style="margin-top:64px; margin-left:60px;">
       <div class="col l4 m6 margin-bottom">
         <div class="card" style="background-color: #9effee; width: 320px;">
-          <img src="../static/images/pranavPic.JPEG" alt="Pranav" style="width:100%">
+          <img src="../static/images/pranavPic2" alt="Pranav" style="width:100%">
           <div class="container">
             <h3 style="color: black;">Pranav Addepalli</h3>
             <p class="opacity" style="padding-bottom: 20px; color: black;">Full Stack Developer</p>
