--- a/templates/home.html
+++ b/templates/home.html
@@ -85,7 +85,7 @@
     <div class="bar card" id="myNavbar" height="25px">
       <a href="#home" class="bar-item button wide"><img src="static/images/logo.png" style="width: auto; height:25px;border:0;"></a>
       <!-- Right-sided navbar links -->
-      <div class="right hide-small">
+      <div class="right hide-small white">
         <a href="#home" class="bar-item button">HOME</a>
         <a href="#about" class="bar-item button">ABOUT</a>
         <a href="#tools" class="bar-item button">TOOLS</a>
