--- a/templates/home.html
+++ b/templates/home.html
@@ -85,11 +85,11 @@
     <div class="bar card" id="myNavbar" height="25px">
       <a href="#home" class="bar-item button wide"><img src="static/images/logo.png" style="width: auto; height:25px;border:0;"></a>
       <!-- Right-sided navbar links -->
-      <div class="right hide-small white">
-        <a href="#home" class="bar-item button">HOME</a>
-        <a href="#about" class="bar-item button">ABOUT</a>
-        <a href="#tools" class="bar-item button">TOOLS</a>
-        <a href="#team" class="bar-item button">TEAM</a>
+      <div class="right hide-small">
+        <a href="#home" class="bar-item button white">HOME</a>
+        <a href="#about" class="bar-item button white">ABOUT</a>
+        <a href="#tools" class="bar-item button white">TOOLS</a>
+        <a href="#team" class="bar-item button white">TEAM</a>
       </div>
       <!-- Hide right-floated links on small screens and replace them with a menu icon -->
       <a href="javascript:void(0)" class="bar-item button right hide-large hide-medium" onclick="w3_open()">
@@ -101,10 +101,10 @@
   <!-- Sidebar on small screens when clicking the menu icon -->
   <nav class="sidebar bar-block black card animate-left hide-medium hide-large" style="display:none" id="mySidebar">
     <a href="javascript:void(0)" onclick="w3_close()" class="bar-item button large padding-16">Close ×</a>
-    <a href="#home" class="bar-item button">HOME</a>
-    <a href="#about" class="bar-item button">ABOUT</a>
-    <a href="#tools" class="bar-item button">TOOLS</a>
-    <a href="#tools" class="bar-item button">TEAM</a>
+    <a href="#home" class="bar-item button white">HOME</a>
+    <a href="#about" class="bar-item button white">ABOUT</a>
+    <a href="#tools" class="bar-item button white">TOOLS</a>
+    <a href="#tools" class="bar-item button white">TEAM</a>
   </nav>
 
   <!-- Header with full-height image -->
@@ -113,9 +113,10 @@
       <span class="jumbo hide-small"><img src="static/images/logo.png" style="width: auto; height: 200px; position: relative; top:150px; left:50px;" </span> <br>
         <span class="xxlarge hide-large hide-medium">Laire</span><br>
         <span class="large" style="position: relative; left: 50px;"></span>
-        <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Learn more</a>
+        <p style="position:relative;left:20px;">
+            Very cool thing.
         </p>
-        <p style="position:relative;left:50px;">
+        <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Learn more</a>
         </p>
 
     </div>
