--- a/templates/home.html
+++ b/templates/home.html
@@ -117,6 +117,7 @@
             Very cool thing.
         </p>
         <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Learn more</a>
+            <a href="#about" class="button blue padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Contact Now</a>
         </p>
 
     </div>
