--- a/templates/home.html
+++ b/templates/home.html
@@ -86,10 +86,10 @@
       <a href="#home" class="bar-item button wide"><img src="static/images/logo.png" style="width: auto; height:25px;border:0;"></a>
       <!-- Right-sided navbar links -->
       <div class="right hide-small">
-        <a href="#home" class="bar-item button white">HOME</a>
-        <a href="#about" class="bar-item button white">ABOUT</a>
-        <a href="#tools" class="bar-item button white">TOOLS</a>
-        <a href="#team" class="bar-item button white">TEAM</a>
+        <a href="#home" class="bar-item button">HOME</a>
+        <a href="#about" class="bar-item button">ABOUT</a>
+        <a href="#tools" class="bar-item button">TOOLS</a>
+        <a href="#team" class="bar-item button">TEAM</a>
       </div>
       <!-- Hide right-floated links on small screens and replace them with a menu icon -->
       <a href="javascript:void(0)" class="bar-item button right hide-large hide-medium" onclick="w3_open()">
@@ -101,10 +101,10 @@
   <!-- Sidebar on small screens when clicking the menu icon -->
   <nav class="sidebar bar-block black card animate-left hide-medium hide-large" style="display:none" id="mySidebar">
     <a href="javascript:void(0)" onclick="w3_close()" class="bar-item button large padding-16">Close ×</a>
-    <a href="#home" class="bar-item button white">HOME</a>
-    <a href="#about" class="bar-item button white">ABOUT</a>
-    <a href="#tools" class="bar-item button white">TOOLS</a>
-    <a href="#tools" class="bar-item button white">TEAM</a>
+    <a href="#home" class="bar-item button">HOME</a>
+    <a href="#about" class="bar-item button">ABOUT</a>
+    <a href="#tools" class="bar-item button">TOOLS</a>
+    <a href="#tools" class="bar-item button">TEAM</a>
   </nav>
 
   <!-- Header with full-height image -->
