--- a/templates/home.html
+++ b/templates/home.html
@@ -41,7 +41,7 @@
   .bgimg-1 {
     background-position: center;
     background-size: cover;
-    background-image: url("../static/images/homeBack.jpg");
+    background-image: url("../static/images/homebg2.jpg");
     min-height: 100%;
   }
 
@@ -71,7 +71,7 @@
   }
 
   #tools {
-    background-image: url("../static/images/homeBack.jpg");
+    background-image: url("../static/images/homebg2.jpg");
   }
 </style>
 
