--- a/templates/home.html
+++ b/templates/home.html
@@ -41,7 +41,7 @@
   .bgimg-1 {
     background-position: center;
     background-size: cover;
-    background-image: url("../static/images/homebg2.jpg");
+    background-image: url("../static/images/lairebg.png");
     min-height: 100%;
   }
 
@@ -71,7 +71,7 @@
   }
 
   #tools {
-    background-image: url("../static/images/homebg2.jpg");
+    background-image: url("../static/images/lairebg.png");
   }
 </style>
 
@@ -83,8 +83,7 @@
   <!-- Navbar (sit on top) -->
   <div class="top">
     <div class="bar card" id="myNavbar" height="25px">
-      <a href="#home" class="bar-item button wide"><img src="static/images/logo.png" style="width: auto; height:25px;border:0;"></a>
-      <!-- Right-sided navbar links -->
+        <!-- Right-sided navbar links -->
       <div class="right hide-small">
         <a href="#home" class="bar-item button">HOME</a>
         <a href="#about" class="bar-item button">ABOUT</a>
