--- a/templates/home.html
+++ b/templates/home.html
@@ -83,7 +83,8 @@
   <!-- Navbar (sit on top) -->
   <div class="top">
     <div class="bar card" id="myNavbar" height="25px">
-        <!-- Right-sided navbar links -->
+      <a href="#home" class="bar-item button wide"><img src="static/images/logo.png" style="width: auto; height:25px;border:0;"></a>
+      <!-- Right-sided navbar links -->
       <div class="right hide-small">
         <a href="#home" class="bar-item button">HOME</a>
         <a href="#about" class="bar-item button">ABOUT</a>
@@ -108,15 +109,10 @@
 
   <!-- Header with full-height image -->
   <header class="bgimg-1 display-container grayscale-min" id="home" height="500px">
-    <div class="display-left text-white" style="padding:48px">
-      <span class="jumbo hide-small"><img src="static/images/logo.png" style="width: auto; height: 200px; position: relative; top:150px; left:50px;" </span> <br>
-        <span class="xxlarge hide-large hide-medium">Laire</span><br>
+    <div class="display-left text-white" style="padding:48px"><span class="xxlarge hide-large hide-medium">Laire</span><br>
         <span class="large" style="position: relative; left: 20px;"></span>
-        <p style="position:relative;left:20px;">
-            Very cool thing.
-        </p>
-        <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Learn more</a>
-            <a href="#about" class="button blue padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Contact Now</a>
+        <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:30px;">Learn more</a>
+            <a href="#about" class="button blue padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:30px;">Contact Now</a>
         </p>
 
     </div>
