--- a/templates/home.html
+++ b/templates/home.html
@@ -88,7 +88,7 @@
       <div class="right hide-small">
         <a href="#home" class="bar-item button">HOME</a>
         <a href="#about" class="bar-item button">ABOUT</a>
-        <a href="#tools" class="bar-item button">TOOLS</a>
+        <a href="#tools" class="bar-item button">WHAT WE DO</a>
         <a href="#team" class="bar-item button">TEAM</a>
       </div>
       <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -103,7 +103,7 @@
     <a href="javascript:void(0)" onclick="w3_close()" class="bar-item button large padding-16">Close ×</a>
     <a href="#home" class="bar-item button">HOME</a>
     <a href="#about" class="bar-item button">ABOUT</a>
-    <a href="#tools" class="bar-item button">TOOLS</a>
+    <a href="#tools" class="bar-item button">RESPONSIBILITIES</a>
     <a href="#tools" class="bar-item button">TEAM</a>
   </nav>
 
@@ -123,19 +123,28 @@
   <div class="container light-grey" style="padding:128px 16px" id="about">
     <div class="row-padding">
       <div class="col m6">
-        <h3>About Us</h3>
-        <p>Our mission is to leverage the power of machine learning and artificial
-          intelligence to provide data analytics and insight to the community.
-          <br>
+        <h3>Web development and digital marketing powered by AI.</h3>
+        <p>Laire is a startup focused on helping local businesses grow
+          <br>by using advanced tools to build websites and manage social media platforms.
          </p>
-        <h3>
-            <br>Laire is committed to attracting the best talent and to providing only the best to our clients.
-          <br>
-          <br>
-      </h3>
       </div>
       <div class="col m6">
         <img class="image round-large" src="static/images/datascience.gif" alt="datascience">
+      </div>
+    </div>
+  </div>
+
+  <!-- RESPONSIBILITIES -->
+  <div class="container light-grey" style="padding:128px 16px" id="tools">
+    <div class="row-padding">
+      <div class="col m6">
+        <h3>About Us</h3>
+        <p>Our mission is to bridge the gap between a startup and a business
+          <br>by improving the digital marketing through advanced web development.
+         </p>
+      </div>
+      <div class="col m6">
+        <img class="image round-large" src="static/images/websiteReq.gif" alt="datascience">
       </div>
     </div>
   </div>
