--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,7 @@
   }
 
   #tools {
-    background-image: url("../static/images/lairebg.png");
+    background-image: url("../static/images/tools.jpg");
   }
 </style>
 
@@ -135,10 +135,10 @@
   </div>
 
   <!-- RESPONSIBILITIES -->
-  <div class="container light-grey" style="padding:128px 16px" id="tools">
+  <div class="container light-grey" style="padding:128px 16px" id="tools" >
     <div class="row-padding">
       <div class="col m6">
-        <h3>About Us</h3>
+        <h3>Responsibilites</h3>
         <p>Our mission is to bridge the gap between a startup and a business
           <br>by improving the digital marketing through advanced web development.
          </p>
