--- a/templates/home.html
+++ b/templates/home.html
@@ -33,12 +33,6 @@
   }
 
   /* Full height image header */
-  .bgimg-1 {
-    background-position: center;
-    background-size: cover;
-    background-color: #43454f;
-    min-height: 100%;
-  }
 
   .bar .button {
     padding: 16px;
@@ -47,7 +41,7 @@
   .bgimg-1 {
     background-position: center;
     background-size: cover;
-    background-image: url("https://imgnooz.com/sites/default/files/wallpaper/abstract/55590/pink-blue-gradient-wallpapers-55590-9972982.png");
+    background-image: url("../static/images/lairebg.png");
     min-height: 100%;
   }
 
@@ -76,8 +70,8 @@
     transform: scale(1.2);
   }
 
-  #tools {
-    background-image: url("https://imgnooz.com/sites/default/files/wallpaper/abstract/55590/pink-blue-gradient-wallpapers-55590-3961722.jpg");
+  #webdev {
+    background-image: url("../static/images/webdev.jpg");
   }
 </style>
 
@@ -88,14 +82,16 @@
 
   <!-- Navbar (sit on top) -->
   <div class="top">
-    <div class="bar white card" id="myNavbar" height="25px">
+    <div class="bar card" id="myNavbar" height="25px">
       <a href="#home" class="bar-item button wide"><img src="static/images/logo.png" style="width: auto; height:25px;border:0;"></a>
       <!-- Right-sided navbar links -->
       <div class="right hide-small">
-        <a href="#home" class="bar-item button">HOME</a>
-        <a href="#about" class="bar-item button">ABOUT</a>
-        <a href="#tools" class="bar-item button">TOOLS</a>
-        <a href="#team" class="bar-item button">TEAM</a>
+          <a href="#home" class="bar-item button">HOME</a>
+          <a href="#about" class="bar-item button">ABOUT</a>
+          <a href="#webdev" class="bar-item button">WEB DEVELOPMENT</a>
+          <a href="#social" class="bar-item button">SOCIAL MEDIA</a>
+          <a href="#team" class="bar-item button">TEAM</a>
+          <a href="#contact" class="bar-item button">CONTACT</a>
       </div>
       <!-- Hide right-floated links on small screens and replace them with a menu icon -->
       <a href="javascript:void(0)" class="bar-item button right hide-large hide-medium" onclick="w3_open()">
@@ -109,17 +105,20 @@
     <a href="javascript:void(0)" onclick="w3_close()" class="bar-item button large padding-16">Close ×</a>
     <a href="#home" class="bar-item button">HOME</a>
     <a href="#about" class="bar-item button">ABOUT</a>
-    <a href="#tools" class="bar-item button">TOOLS</a>
-    <a href="#tools" class="bar-item button">TEAM</a>
+    <a href="#webdev" class="bar-item button">WEB DEVELOPMENT</a>
+    <a href="#social" class="bar-item button">SOCIAL MEDIA</a>
+    <a href="#team" class="bar-item button">TEAM</a>
+    <a href="#contact" class="bar-item button">CONTACT</a>
   </nav>
 
   <!-- Header with full-height image -->
   <header class="bgimg-1 display-container grayscale-min" id="home" height="500px">
-    <div class="display-left text-white" style="padding:48px">
-      <span class="jumbo hide-small"><img src="static/images/logo.png" style="width: auto; height: 200px; position: relative; top:150px; left:50px;" </span> <br>
-        <span class="xxlarge hide-large hide-medium">Laire</span><br>
-        <span class="large" style="position: relative; left: 50px;"></span>
-        <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Learn more</a></p>
+    <div class="display-left text-white" style="padding:48px"><span class="xxlarge hide-large hide-medium">Laire</span><br>
+        <span class="large" style="position: relative; left: 20px;"></span>
+        <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Learn more</a>
+            <a href="#about" class="button blue padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Contact Now</a>
+        </p>
+
     </div>
 
   </header>
@@ -128,50 +127,116 @@
   <div class="container light-grey" style="padding:128px 16px" id="about">
     <div class="row-padding">
       <div class="col m6">
-        <h3>Analytics</h3>
-        <p>Our mission is to leverage the power of machine learning and artificial
-          intelligence to provide data analytics and insight to the community.
-          <br>
-          <br>
-          <br>Laire is committed to attracting the best talent and to providing only the best to our clients.
-          <br>
-          <br>
-
-        </p>
+        <h3>Web development and digital marketing powered by AI.</h3>
+        <p>Laire is a startup focused on helping local businesses grow
+          <br>by using advanced tools to build websites and manage social media platforms.
+         </p>
       </div>
       <div class="col m6">
-        <img class="image round-large" src="static/images/" alt="datascience">
+        <img class="image round-large" src="static/images/datascience.gif" alt="datascience">
       </div>
     </div>
   </div>
 
-
-  <!-- OUR TOOLS -->
-  <center>
-    <div class="container blue-grey" style="padding:128px 16px;" id="tools">
-      <h3 class="center">OUR TOOLS</h3>
-      <div class="row-padding center" style="width: 100%; margin-top:64px">
-
-        <div class="quarter zoom" onclick="location.href='{{ url_for('hbc') }}';" style="margin-left:10%">
-          <i class="fa fa-heart margin-bottom jumbo center"></i>
-          <p class="large">Heartbeat Classification</p>
-          <p> Classifies heartbeats into normal, artifact, extrasystole, and murmur classes.</p>
-        </div>
-        <div class="quarter zoom" style="margin-left:10%">
-          <i class="fa fa-terminal margin-bottom jumbo center"></i>
-          <p class="large">Tool 2</p>
-          <p>Coming Soon!</p>
-        </div>
-
+  <!-- WEB DEVELOPMENT -->
+  <div class="container light-grey" style="padding:128px 256px" id="webdev" >
+    <div class="row-padding">
+      <div class="col m6">
+        <h3>WEB DEVELOPMENT</h3>
+        <p>Our mission is to bridge the gap between a startup and a business
+          <br>by improving the digital marketing through advanced web development.
+         </p>
+      </div>
+      <div class="col m6">
       </div>
     </div>
-  </center>
+  </div>
+
+  <!-- SOCIAL MEDIA -->
+  <div class="container light-grey" style="padding:128px 256px" id="social" >
+    <div class="row-padding">
+      <div class="col m6">
+        <h3>SOCIAL MEDIA</h3>
+        <p>Our mission is to bridge the gap between a startup and a business
+          <br>by improving the digital marketing through advanced web development.
+         </p>
+      </div>
+      <div class="col m6">
+      </div>
+    </div>
+  </div>
+
+  <!-- CONTACT -->
+  <div class="container light-grey" style="padding:128px 256px" id="contact" >
+    <div class="row-padding">
+      <div class="col m6">
+        <h3>CONTACT</h3>
+        <p>Our mission is to bridge the gap between a startup and a business
+          <br>by improving the digital marketing through advanced web development.
+         </p>
+      </div>
+      <div class="col m6">
+      </div>
+    </div>
+  </div>
+
+  <!-- OUR TEAM -->
+  <div class="container" style="padding:128px 16px" id="team">
+    <center>
+      <h3 class="center" style="color: black;">THE TEAM</h3>
+    </center>
+    <div class="row-padding " style="margin-top:64px; margin-left:60px;">
+      <div class="col l4 m6 margin-bottom">
+        <div class="card" style="background-color: #9effee; width: 300px;">
+          <img src="../static/images/pranavPic.jpg" alt="Pranav" style="width:100%">
+          <div class="container">
+            <h3 style="color: black;">Pranav Addepalli</h3>
+            <p class="opacity" style="padding-bottom: 20px; color: black;">Full Stack Developer</p>
+            <center>
+              <a href="mailto:pranav@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:20px"></i></a>
+              <a href="https://www.linkedin.com/in/pranavaddepalli/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
+
+            </center>
+          </div>
+        </div>
+      </div>
+      <div class="col l4 m6 margin-bottom">
+        <div class="card" style="background-color: #9effee; width: 300px;">
+          <img src="../static/images/haneefPic.JPEG" alt="Haneef" style="width:100%">
+          <div class="container">
+            <h3 style="color: black;">Haneef Khan</h3>
+            <p class="opacity" style="padding-bottom: 20px; color: black;">Lead Software Developer</p>
+            <center>
+              <a href="mailto:haneef@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:10px"></i></a>
+              <a href="https://www.linkedin.com/in/haneef-khan-778676139/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
+            </center>
+          </div>
+        </div>
+      </div>
+      <div class="col l4 m6 margin-bottom">
+        <div class="card" style="background-color: #9effee; width: 300px;">
+          <img src="../static/images/sidPic.jpg" alt="Sid" style="width:100%">
+          <div class="container">
+            <h3 style="color: black;">Sid Rapolu</h3>
+            <p class="opacity" style="padding-bottom: 20px; color: black;">Lead Web Developer</p>
+            <center>
+              <a href="mailto:sid@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
+              <a href="https://www.linkedin.com/in/sid-r-2a00a1137/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
+
+            </center>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
 
 
   <!-- Footer -->
-  <footer class="center black padding-64" style="width: 100%">
+  <footer class="center light-gray padding-64" style="width: 100%">
     <center>
-      <a href="#home" class="button light-grey"><i class="fa fa-arrow-up margin-right"></i>Top</a>
+      <a href="#home" class="button light-grey"><i class="fa fa-arrow-up margin-right"></i>Back to top</a>
       <div class="xlarge section">
       </div>
     </center>
