--- a/templates/home.html
+++ b/templates/home.html
@@ -86,12 +86,12 @@
       <a href="#home" class="bar-item button wide"><img src="static/images/logo.png" style="width: auto; height:25px;border:0;"></a>
       <!-- Right-sided navbar links -->
       <div class="right hide-small">
-          <a href="#home" class="bar-item button">HOME</a>
-          <a href="#about" class="bar-item button">ABOUT</a>
-          <a href="#webdev" class="bar-item button">WEB DEVELOPMENT</a>
-          <a href="#social" class="bar-item button">SOCIAL MEDIA</a>
-          <a href="#contact" class="bar-item button">CONTACT</a>
-          <a href="#team" class="bar-item button">TEAM</a>
+        <a href="#home" class="bar-item button">HOME</a>
+        <a href="#about" class="bar-item button">ABOUT</a>
+        <a href="#webdev" class="bar-item button">WEB DEVELOPMENT</a>
+        <a href="#social" class="bar-item button">SOCIAL MEDIA</a>
+        <a href="#team" class="bar-item button">TEAM</a>
+        <a href="#contact" class="bar-item button">CONTACT</a>
       </div>
       <!-- Hide right-floated links on small screens and replace them with a menu icon -->
       <a href="javascript:void(0)" class="bar-item button right hide-large hide-medium" onclick="w3_open()">
@@ -114,10 +114,10 @@
   <!-- Header with full-height image -->
   <header class="bgimg-1 display-container grayscale-min" id="home" height="500px">
     <div class="display-left text-white" style="padding:48px"><span class="xxlarge hide-large hide-medium">Laire</span><br>
-        <span class="large" style="position: relative; left: 20px;"></span>
-        <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Learn more</a>
-            <a href="#about" class="button blue padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Contact Now</a>
-        </p>
+      <span class="large" style="position: relative; left: 20px;"></span>
+      <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;top:100px;">Learn more</a>
+        <a href="#about" class="button blue padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Contact Now</a>
+      </p>
 
     </div>
 
@@ -130,7 +130,7 @@
         <h3>Web development and digital marketing powered by AI.</h3>
         <p>Laire is a startup focused on helping local businesses grow
           <br>by using advanced tools to build websites and manage social media platforms.
-         </p>
+        </p>
       </div>
       <div class="col m6">
         <img class="image round-large" src="static/images/datascience.gif" alt="datascience">
@@ -139,27 +139,26 @@
   </div>
 
   <!-- WEB DEVELOPMENT -->
-  <div class="container light-grey" style="padding:128px 256px" id="webdev" >
+  <div class="container light-grey" style="padding:128px 256px" id="webdev">
     <div class="row-padding">
       <div class="col m6">
         <h3>WEB DEVELOPMENT</h3>
         <p>Our mission is to bridge the gap between a startup and a business
           <br>by improving the digital marketing through advanced web development.
-         </p>
+        </p>
       </div>
       <div class="col m6">
       </div>
     </div>
   </div>
-
   <!-- SOCIAL MEDIA -->
-  <div class="container light-grey" style="padding:128px 256px" id="social" >
+  <div class="container light-grey" style="padding:128px 256px" id="social">
     <div class="row-padding">
       <div class="col m6">
         <h3>SOCIAL MEDIA</h3>
         <p>Our mission is to bridge the gap between a startup and a business
           <br>by improving the digital marketing through advanced web development.
-         </p>
+        </p>
       </div>
       <div class="col m6">
       </div>
@@ -167,13 +166,13 @@
   </div>
 
   <!-- CONTACT -->
-  <div class="container light-grey" style="padding:128px 256px" id="contact" >
+  <div class="container light-grey" style="padding:128px 256px" id="contact">
     <div class="row-padding">
       <div class="col m6">
         <h3>CONTACT</h3>
         <p>Our mission is to bridge the gap between a startup and a business
           <br>by improving the digital marketing through advanced web development.
-         </p>
+        </p>
       </div>
       <div class="col m6">
       </div>
@@ -220,23 +219,14 @@
             <h3 style="color: black;">Sid Rapolu</h3>
             <p class="opacity" style="padding-bottom: 20px; color: black;">Lead Web Developer</p>
             <center>
-              <a href="mailto:haneef@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:10px"></i></a>
-              <a href="https://www.linkedin.com/in/haneef-khan-778676139/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
-            </center>
-          </div>
-        </div>
-      </div>
-          <img src="../static/images/sidPic.jpg" alt="Sid" style="width:100%">
-          <div class="container">
-            <h3 style="color: black;">Sid Rapolu</h3>
-            <p class="opacity" style="padding-bottom: 20px; color: black;">Lead Web Developer</p>
-            <center>
               <a href="mailto:sid@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
-              <a href="https://www.linkedin.com/in/sidrapolu/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
+              <a href="https://www.linkedin.com/in/sid-r-2a00a1137/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
+
             </center>
           </div>
         </div>
       </div>
+    </div>
   </div>
 
 
@@ -279,8 +269,18 @@
       mySidebar.style.display = "none";
     }
   </script>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
+    //transparent to solid Navbar
+    $(window).scroll(function() {
+      if ($(window).scrollTop() >= 750) {
+        $('#myNavbar').css('background', 'white');
+      } else {
+        $('#myNavbar').css('background', 'transparent');
+      }
+    });
+
     $(function() {
       $('body').removeClass('fade-out');
     });
