--- a/templates/home.html
+++ b/templates/home.html
@@ -89,7 +89,7 @@
         <a href="#home" class="bar-item button">HOME</a>
         <a href="#about" class="bar-item button">ABOUT</a>
         <a href="#webdev" class="bar-item button">WEB DEVELOPMENT</a>
-        <a href="#social" class="bar-item button">SOCIAL MEDIA</a>
+        <a href="#social" class="bar-item button">SOCIAL</a>
         <a href="#team" class="bar-item button">TEAM</a>
         <a href="#contact" class="bar-item button">CONTACT</a>
       </div>
