--- a/templates/home.html
+++ b/templates/home.html
@@ -115,8 +115,8 @@
   <header class="bgimg-1 display-container grayscale-min" id="home" height="500px">
     <div class="display-left text-white" style="padding:48px"><span class="xxlarge hide-large hide-medium">Laire</span><br>
       <span class="large" style="position: relative; left: 20px;"></span>
-      <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;top:100px;">Learn more</a>
-        <a href="#about" class="button blue padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Contact Now</a>
+      <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:500px;top:100px;">Learn more</a>
+        <a href="#about" class="button blue padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:600px;top:100px">Contact Now</a>
       </p>
 
     </div>
