--- a/templates/home.html
+++ b/templates/home.html
@@ -89,7 +89,7 @@
         <a href="#home" class="bar-item button">HOME</a>
         <a href="#about" class="bar-item button">ABOUT</a>
         <a href="#webdev" class="bar-item button">WEB DEVELOPMENT</a>
-        <a href="#social" class="bar-item button">SOCIAL</a>
+        <a href="#social" class="bar-item button">SOCIAL MEDIA</a>
         <a href="#team" class="bar-item button">TEAM</a>
         <a href="#contact" class="bar-item button">CONTACT</a>
       </div>
@@ -115,8 +115,8 @@
   <header class="bgimg-1 display-container grayscale-min" id="home" height="500px">
     <div class="display-left text-white" style="padding:48px"><span class="xxlarge hide-large hide-medium">Laire</span><br>
       <span class="large" style="position: relative; left: 20px;"></span>
-      <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:355px;top:100px;">Learn more</a>
-        <a href="#contact" class="button blue padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:500px;top:100px;">Contact Now</a>
+      <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:370px;top:100px;">Learn more</a>
+        <a href="#about" class="button blue padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:500px;top:100px">Contact Now</a>
       </p>
 
     </div>
@@ -139,26 +139,28 @@
   </div>
 
   <!-- WEB DEVELOPMENT -->
-  <div class="container light-grey" style="padding:128px 100px" id="webdev">
+  <div class="container light-grey" style="padding:128px 256px" id="webdev">
     <div class="row-padding">
-      <div class="col s6">
+      <div class="col m6">
         <h3>WEB DEVELOPMENT</h3>
+        <p>Our mission is to bridge the gap between a startup and a business
+          <br>by improving the digital marketing through advanced web development.
+        </p>
       </div>
-      <div class="col s6 offset-s6">
-          <p>Our mission is to bridge the gap between a startup and a business
-            <br>by improving the digital marketing through advanced web development.
-          </p>
+      <div class="col m6">
       </div>
     </div>
   </div>
   <!-- SOCIAL MEDIA -->
   <div class="container light-grey" style="padding:128px 256px" id="social">
     <div class="row-padding">
-      <div class="col s9 offset-s2">
+      <div class="col m6">
         <h3>SOCIAL MEDIA</h3>
         <p>Our mission is to bridge the gap between a startup and a business
           <br>by improving the digital marketing through advanced web development.
         </p>
+      </div>
+      <div class="col m6">
       </div>
     </div>
   </div>
@@ -166,11 +168,13 @@
   <!-- CONTACT -->
   <div class="container light-grey" style="padding:128px 256px" id="contact">
     <div class="row-padding">
-      <div class="col s9 offset-s2">
+      <div class="col m6">
         <h3>CONTACT</h3>
         <p>Our mission is to bridge the gap between a startup and a business
           <br>by improving the digital marketing through advanced web development.
         </p>
+      </div>
+      <div class="col m6">
       </div>
     </div>
   </div>
