--- a/templates/home.html
+++ b/templates/home.html
@@ -73,6 +73,9 @@
   #webdev {
     background-image: url("../static/images/webdev.jpg");
   }
+  #social {
+    background-image: url("../static/images/webdev.jpg");
+  }
 </style>
 
 <body>
@@ -116,7 +119,7 @@
     <div class="display-left text-white" style="padding:48px"><span class="xxlarge hide-large hide-medium">Laire</span><br>
       <span class="large" style="position: relative; left: 20px;"></span>
       <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:370px;top:100px;">Learn more</a>
-        <a href="#about" class="button blue padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:500px;top:100px">Contact Now</a>
+        <a href="#contact" class="button blue padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:500px;top:100px">Contact Now</a>
       </p>
 
     </div>
@@ -124,7 +127,7 @@
   </header>
 
   <!-- ABOUT COMPANY -->
-  <div class="container light-grey" style="padding:128px 16px" id="about">
+  <div class="container white" style="padding:128px 16px" id="about">
     <div class="row-padding">
       <div class="col m6">
         <h3>Web development and digital marketing powered by AI.</h3>
@@ -139,30 +142,24 @@
   </div>
 
   <!-- WEB DEVELOPMENT -->
-  <div class="container light-grey" style="padding:128px 256px" id="webdev">
+  <div class="container" style="padding:128px 150px" id="webdev">
     <div class="row-padding">
-      <div class="col m6">
+      <div class="col s6">
         <h3>WEB DEVELOPMENT</h3>
-        <p>Our mission is to bridge the gap between a startup and a business
-          <br>by improving the digital marketing through advanced web development.
-        </p>
       </div>
-      <div class="col m6">
+      <div class="col s6 offset-s6">
+          <p>Personalized websites with no templates tailored to your preferences.
+              Powered by our AI engine, professional email client, and fully
+              personalized management and support from our team of experienced developers.
+          </p>
       </div>
     </div>
   </div>
   <!-- SOCIAL MEDIA -->
-  <div class="container light-grey" style="padding:128px 256px" id="social">
-    <div class="row-padding">
-      <div class="col m6">
+  <div class="container blue" style="padding:128px 550px;" id="social">
+      <div class="container" style="padding:110px 0px;">
         <h3>SOCIAL MEDIA</h3>
-        <p>Our mission is to bridge the gap between a startup and a business
-          <br>by improving the digital marketing through advanced web development.
-        </p>
       </div>
-      <div class="col m6">
-      </div>
-    </div>
   </div>
 
   <!-- CONTACT -->
@@ -274,7 +271,7 @@
   <script>
     //transparent to solid Navbar
     $(window).scroll(function() {
-      if ($(window).scrollTop() >= 750) {
+      if ($(window).scrollTop() >= 700) {
         $('#myNavbar').css('background', 'white');
       } else {
         $('#myNavbar').css('background', 'transparent');
