--- a/templates/home.html
+++ b/templates/home.html
@@ -71,9 +71,13 @@
   }
 
   #webdev {
+    background-position: center;
+    background-size: cover;
     background-image: url("../static/images/webdev.jpg");
   }
   #social {
+    background-position: center;
+    background-size: cover;
     background-image: url("../static/images/webdev.jpg");
   }
 </style>
@@ -93,8 +97,8 @@
         <a href="#about" class="bar-item button">ABOUT</a>
         <a href="#webdev" class="bar-item button">WEB DEVELOPMENT</a>
         <a href="#social" class="bar-item button">SOCIAL MEDIA</a>
-        <a href="#team" class="bar-item button">TEAM</a>
         <a href="#contact" class="bar-item button">CONTACT</a>
+        <a href="#team" class="bar-item button">TEAM</a>
       </div>
       <!-- Hide right-floated links on small screens and replace them with a menu icon -->
       <a href="javascript:void(0)" class="bar-item button right hide-large hide-medium" onclick="w3_open()">
@@ -110,8 +114,8 @@
     <a href="#about" class="bar-item button">ABOUT</a>
     <a href="#webdev" class="bar-item button">WEB DEVELOPMENT</a>
     <a href="#social" class="bar-item button">SOCIAL MEDIA</a>
-    <a href="#team" class="bar-item button">TEAM</a>
     <a href="#contact" class="bar-item button">CONTACT</a>
+    <a href="#team" class="bar-item button">TEAM</a>
   </nav>
 
   <!-- Header with full-height image -->
@@ -144,12 +148,17 @@
   <!-- WEB DEVELOPMENT -->
   <div class="container" style="padding:128px 150px" id="webdev">
     <div class="row-padding">
-      <div class="col s6">
+      <div class="col s6" style="padding:160px 0px;">
         <h3>WEB DEVELOPMENT</h3>
       </div>
       <div class="col s6 offset-s6">
-          <p>Personalized websites with no templates tailored to your preferences.
-              Powered by our AI engine, professional email client, and fully
+          <p>
+              <br>
+              <br>
+              <br>
+              <br>Personalized websites with no templates tailored to your preferences.
+              <br>
+              <br>Powered by our AI engine, professional email client, and fully
               personalized management and support from our team of experienced developers.
           </p>
       </div>
@@ -157,23 +166,9 @@
   </div>
   <!-- SOCIAL MEDIA -->
   <div class="container blue" style="padding:128px 550px;" id="social">
-      <div class="container" style="padding:110px 0px;">
+      <div class="container" style="padding:160px 0px;">
         <h3>SOCIAL MEDIA</h3>
       </div>
-  </div>
-
-  <!-- CONTACT -->
-  <div class="container light-grey" style="padding:128px 256px" id="contact">
-    <div class="row-padding">
-      <div class="col m6">
-        <h3>CONTACT</h3>
-        <p>Our mission is to bridge the gap between a startup and a business
-          <br>by improving the digital marketing through advanced web development.
-        </p>
-      </div>
-      <div class="col m6">
-      </div>
-    </div>
   </div>
 
   <!-- OUR TEAM -->
@@ -226,7 +221,19 @@
     </div>
   </div>
 
-
+  <!-- CONTACT -->
+  <div class="container light-grey" style="padding:128px 256px" id="contact">
+    <div class="row-padding">
+      <div class="col m6">
+        <h3>CONTACT</h3>
+        <p>Our mission is to bridge the gap between a startup and a business
+          <br>by improving the digital marketing through advanced web development.
+        </p>
+      </div>
+      <div class="col m6">
+      </div>
+    </div>
+  </div>
 
   <!-- Footer -->
   <footer class="center light-gray padding-64" style="width: 100%">
