--- a/templates/home.html
+++ b/templates/home.html
@@ -180,53 +180,80 @@
   </div>
 
   <!-- OUR TEAM -->
-  <div class="container" style="padding:128px 16px" id="team">
-    <center>
-      <h3 class="center" style="color: black;">THE TEAM</h3>
-    </center>
-    <div class="row-padding " style="margin-top:64px; margin-left:60px;">
-      <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #9effee; width: 300px;">
-          <img src="../static/images/pranavPic.jpg" alt="Pranav" style="width:100%">
-          <div class="container">
-            <h3 style="color: black;">Pranav Addepalli</h3>
-            <p class="opacity" style="padding-bottom: 20px; color: black;">Full Stack Developer</p>
-            <center>
-              <a href="mailto:pranav@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:20px"></i></a>
-              <a href="https://www.linkedin.com/in/pranavaddepalli/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
+  <div id="team" class="section md-padding">
 
-            </center>
-          </div>
-        </div>
-      </div>
-      <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #9effee; width: 300px;">
-          <img src="../static/images/haneefPic.JPEG" alt="Haneef" style="width:100%">
-          <div class="container">
-            <h3 style="color: black;">Haneef Khan</h3>
-            <p class="opacity" style="padding-bottom: 20px; color: black;">Lead Software Developer</p>
-            <center>
-              <a href="mailto:haneef@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:10px"></i></a>
-              <a href="https://www.linkedin.com/in/haneef-khan-778676139/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
-            </center>
-          </div>
-        </div>
-      </div>
-      <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #9effee; width: 300px;">
-          <img src="../static/images/sidPic.jpg" alt="Sid" style="width:100%">
-          <div class="container">
-            <h3 style="color: black;">Sid Rapolu</h3>
-            <p class="opacity" style="padding-bottom: 20px; color: black;">Lead Web Developer</p>
-            <center>
-              <a href="mailto:sid@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
-              <a href="https://www.linkedin.com/in/sid-r-2a00a1137/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
+    <div class="container">
 
-            </center>
+      <div class="row">
+
+        <div class="section-header text-center">
+          <h2 class="title">Our Team</h2>
+        </div>
+
+
+        <div class="col-sm-4">
+          <div class="team">
+            <div class="team-img">
+              <img class="img-responsive" src="./team1.webp" alt="">
+              <div class="overlay">
+                <div class="team-social">
+                  <a href="https://colorlib.com/etc/creative-agency/index.html#"><i class="fa fa-facebook"></i></a>
+                  <a href="https://colorlib.com/etc/creative-agency/index.html#"><i class="fa fa-google-plus"></i></a>
+                  <a href="https://colorlib.com/etc/creative-agency/index.html#"><i class="fa fa-twitter"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="team-content">
+              <h3>John Doe</h3>
+              <span>Web Designer</span>
+            </div>
           </div>
         </div>
+
+
+        <div class="col-sm-4">
+          <div class="team">
+            <div class="team-img">
+              <img class="img-responsive" src="./team2.webp" alt="">
+              <div class="overlay">
+                <div class="team-social">
+                  <a href="https://colorlib.com/etc/creative-agency/index.html#"><i class="fa fa-facebook"></i></a>
+                  <a href="https://colorlib.com/etc/creative-agency/index.html#"><i class="fa fa-google-plus"></i></a>
+                  <a href="https://colorlib.com/etc/creative-agency/index.html#"><i class="fa fa-twitter"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="team-content">
+              <h3>John Doe</h3>
+              <span>Web Designer</span>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-sm-4">
+          <div class="team">
+            <div class="team-img">
+              <img class="img-responsive" src="./team3.webp" alt="">
+              <div class="overlay">
+                <div class="team-social">
+                  <a href="https://colorlib.com/etc/creative-agency/index.html#"><i class="fa fa-facebook"></i></a>
+                  <a href="https://colorlib.com/etc/creative-agency/index.html#"><i class="fa fa-google-plus"></i></a>
+                  <a href="https://colorlib.com/etc/creative-agency/index.html#"><i class="fa fa-twitter"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="team-content">
+              <h3>John Doe</h3>
+              <span>Web Designer</span>
+            </div>
+          </div>
+        </div>
+
       </div>
+
     </div>
+
   </div>
 
 
